Fixed Bug #55355: Inheritance chain was not regarded when checking whether the abstract method of a trait is satisfied.